# stream-cipher

./: CMakeLists.txt
include/: cipher.h  cipher_state.h
src/: cipher.c  cipher_state.c  main.c
